--- a/assets/scenarios/fortress_defense.yaml
+++ b/assets/scenarios/fortress_defense.yaml
@@ -1,6 +1,9 @@
 # Defense of Fort Grimhold
 # A challenging defense scenario with multiple victory conditions
 # Author: Campaign Designer
+# 
+# This scenario demonstrates the new placement system where all unit
+# placements and map objects are defined in the scenario file.
 
 name: Defense of Fort Grimhold
 description: Defend the fortress against enemy assault for 10 turns
@@ -9,107 +12,195 @@ author: Campaign Designer
 map:
   source: assets/maps/fortress
 
-# Common objective and unit patterns for reuse
-_defaults:
-  # Common objectives
-  objectives: &objective_patterns
-    defeat_all: &defeat_all_enemies
-      type: defeat_all_enemies
-      description: Defeat all enemies
-      
-    survive_defense: &survive_turns
-      type: survive_turns
-      turns: 10
-      description: Hold the fort for 10 turns
-      
-    protect_leader: &protect_leader
-      type: protect_unit
-      unit_name: Sir Aldric
-      description: Sir Aldric must survive
-      
-    defend_position: &defend_fort
-      type: position_captured
-      position: [7, 9]
-      description: Don't let enemies capture the fort
+# Named markers for key positions
+markers:
+  KNIGHT_POSITION:
+    at: [7, 2]
+    description: Central command position for knight
+  CLERIC_POSITION:
+    at: [7, 3]
+    description: Protected healing position
+  HEALING_FOUNTAIN:
+    at: [7, 3]
+    description: Magical fountain that heals allies
+
+# Tactical regions
+regions:
+  FORTRESS_KEEP:
+    rect: [5, 2, 5, 4]
+    description: The fortress provides excellent defense
   
-  # Common stat overrides for enhanced units
-  stats: &enhanced_stats
-    hero_knight: &hero_knight_stats
+  FORTRESS_WALLS:
+    rect: [4, 1, 7, 6]
+    description: Defensive walls of the fortress
+  
+  NORTH_GATE:
+    rect: [6, 6, 3, 2]
+    description: Main entrance to the fortress
+  
+  BATTLEFIELD:
+    rect: [0, 8, 15, 2]
+    description: Open ground with no cover
+  
+  ARCHER_POSITIONS:
+    rect: [5, 3, 5, 1]
+    description: Elevated positions for ranged units
+  
+  ENEMY_SPAWN_AREA:
+    rect: [1, 10, 13, 1]
+    description: Enemy approach zone
+
+# Unit definitions (no positions here)
+units:
+  # === PLAYER FORCES ===
+  - name: Sir Aldric
+    class: KNIGHT
+    team: PLAYER
+    stats_override:
       hp_max: 35
       strength: 9
       defense: 6
       
-    enemy_captain: &captain_stats
-      hp_max: 28
-      strength: 8
-
-# Unit definitions - organized by team
-units:
-  # === PLAYER FORCES ===
-  # Main hero with enhanced stats
-  - name: Sir Aldric
-    class: KNIGHT
-    team: PLAYER
-    position: [7, 9]
-    stats_override:
-      <<: *hero_knight_stats
-      
-  # Support ranged unit
   - name: Archer Elena
     class: ARCHER
     team: PLAYER
-    position: [5, 8]
     
-  # Magical support
+  - name: Archer Marcus
+    class: ARCHER
+    team: PLAYER
+    
   - name: Mage Theron
     class: MAGE
     team: PLAYER
-    position: [9, 8]
 
   # === ENEMY ASSAULT FORCE ===
-  # Enemy leader
   - name: Enemy Captain
     class: WARRIOR
     team: ENEMY
-    position: [7, 1]
     stats_override:
-      <<: *captain_stats
+      hp_max: 28
+      strength: 8
       
-  # Ranged support
-  - name: Enemy Archer 1
-    class: ARCHER
-    team: ENEMY
-    position: [5, 2]
-    
-  - name: Enemy Archer 2
-    class: ARCHER
-    team: ENEMY
-    position: [9, 2]
-    
-  # Heavy assault units
-  - name: Enemy Knight 1
+  - name: Enemy Knight Alpha
     class: KNIGHT
     team: ENEMY
-    position: [3, 1]
     
-  - name: Enemy Knight 2
+  - name: Enemy Knight Beta  
     class: KNIGHT
     team: ENEMY
-    position: [11, 1]
+    
+  - name: Enemy Warrior One
+    class: WARRIOR
+    team: ENEMY
+    
+  - name: Enemy Warrior Two
+    class: WARRIOR
+    team: ENEMY
+    
+  - name: Enemy Warrior Three
+    class: WARRIOR
+    team: ENEMY
+    
+  - name: Enemy Archer
+    class: ARCHER
+    team: ENEMY
 
-# Victory and defeat conditions using anchors
+# Objects from the old map objects.yaml
+objects:
+  HEALING_FOUNTAIN:
+    type: healing_fountain
+    properties:
+      heal_amount: 2
+      team_filter: PLAYER
+
+# Event triggers
+triggers:
+  HEALING_FOUNTAIN_TRIGGER:
+    type: turn_start
+    condition: unit_team:PLAYER
+    action: heal_unit
+    data:
+      heal_amount: 2
+      
+  BREACH_WARNING:
+    type: enter_region
+    condition: unit_team:ENEMY
+    action: display_message
+    data:
+      message: "Enemy has breached the fortress walls!"
+
+# All placements using the new system
+placements:
+  # Player units - strategic defensive positions
+  "Sir Aldric":
+    at_marker: KNIGHT_POSITION
+    
+  "Archer Elena":
+    at: [5, 3]  # Western archer position
+    
+  "Archer Marcus": 
+    at: [9, 3]  # Eastern archer position
+    
+  "Mage Theron":
+    at_marker: CLERIC_POSITION
+  
+  # Enemy units - distributed across battlefield  
+  "Enemy Captain":
+    at: [7, 10]  # Center of enemy formation
+    
+  "Enemy Knight Alpha":
+    at: [2, 10]  # Western flank
+    
+  "Enemy Knight Beta":
+    at: [12, 10]  # Eastern flank
+    
+  "Enemy Warrior One":
+    at: [4, 10]  # Left support
+    
+  "Enemy Warrior Two":
+    at: [10, 10]  # Right support
+    
+  "Enemy Warrior Three":
+    at: [6, 10]  # Left-center support
+    
+  "Enemy Archer":
+    at: [8, 10]  # Right-center support
+  
+  # Objects
+  HEALING_FOUNTAIN:
+    at_marker: HEALING_FOUNTAIN
+
+# Victory and defeat conditions  
 objectives:
   victory:
-    - <<: *survive_turns
-    - <<: *defeat_all_enemies
+    - type: survive_turns
+      turns: 10
+      description: Hold the fort for 10 turns
+    - type: defeat_all_enemies
       description: Or defeat all enemies
       
   defeat:
-    - <<: *protect_leader
-    - <<: *defend_fort
+    - type: protect_unit
+      unit_name: Sir Aldric
+      description: Sir Aldric must survive
+    - type: position_captured
+      position: [7, 9]
+      description: Don't let enemies capture the fort
 
 # Game settings
 settings:
-  turn_limit: 15            # Give some buffer beyond survival objective
+  turn_limit: 15
   starting_team: PLAYER
-  fog_of_war: false         # Keep visibility clear for tactical play
+  fog_of_war: false
+
+# Example of map overrides - could add bridges, open/close gates, etc.
+map_overrides:
+  # Example: Add a temporary bridge across water
+  # tile_patches:
+  #   - x: 3
+  #     y: 8
+  #     tile_id: 1  # Plain terrain
+  # 
+  # region_patches:
+  #   - rect: [6, 6, 2, 1]  # Open the north gate
+  #     tile_id: 1
